1103 push main.html 메뉴에 링크 연결, cafeList, cafeHandlerHelper, cafeMyReservationListController 수정

--- a/app-server/src/main/webapp/main.html
+++ b/app-server/src/main/webapp/main.html
@@ -201,15 +201,15 @@ footer {
       </div>
 
       <ul class="header_menu">
-        <li><a href="#">스터디 찾기</a></li>
-        <li><a href="#">스터디 장소 찾기</a></li>
+        <li><a href="study/list">스터디 찾기</a></li>
+        <li><a href="cafe/list">스터디 장소 찾기</a></li>
         <li><a href="#">내 스터디</a></li>
-        <li><a href="#">공지사항</a></li>
+        <li><a href="adminNotice/list">공지사항</a></li>
       </ul>
 
       <ul class="header_login">
-        <li><a href="#">로그인</a></li>
-        <li><a href="#">회원가입</a></li>
+        <li><a href="member/form">로그인</a></li>
+        <li><a href="member/addform">회원가입</a></li>
       </ul>
     </header>
 
