--- a/app-server/src/main/webapp/main.html
+++ b/app-server/src/main/webapp/main.html
@@ -152,7 +152,7 @@ section {
 .contents .c1 {
   width: 100%;
   height: 800px;
-  background-color: burlywood;
+  background-color: #f0e3d4;
 }
 
 .contents .c2 {
@@ -197,7 +197,7 @@ footer {
 <body>
     <header>
       <div class='header_logo'>
-        <a href="#"><img src="logo.png"></a>
+        <a href="main.html"><img src="logo.png"></a>
       </div>
 
       <ul class="header_menu">
