--- a/app-server/src/main/webapp/main.html
+++ b/app-server/src/main/webapp/main.html
@@ -153,19 +153,20 @@ section {
 .contents .c1 {
   width: 100%;
   height: 800px;
-  background-color: #f0e3d4;
+  background-color: rgb(219, 211, 209);
+  
 }
 
 .contents .c2 {
   width: 100%;
   height: 800px;
-  background-color: wheat;
+  background-color: rgb(247, 231, 215);
 }
 
 .contents .c3 {
   width: 100%;
   height: 800px;
-  background-color: cornsilk;
+  background-color: rgb(247, 247, 247);
 }
 
 /*footer 시작*/
