--- a/app-server/src/main/webapp/login.html
+++ b/app-server/src/main/webapp/login.html
@@ -226,7 +226,7 @@ footer {
   <div class="contains">
     <header>
       <div class='header_logo'>
-        <a href="main.html"><img src="logo.png"></a>
+        <a href="index.html"><img src="logo.png"></a>
       </div>
 
       <ul class="header_menu">
