--- a/app-server/src/main/webapp/index.html
+++ b/app-server/src/main/webapp/index.html
@@ -224,7 +224,7 @@ footer {
 
       <ul class="header_login">
         <li><a href="login.html">로그인</a></li>
-        <li><a href="member/addform">회원가입</a></li>
+        <li><a href="signup">회원가입</a></li>
       </ul>
     </header>
 
