--- a/app-server/src/main/webapp/login.html
+++ b/app-server/src/main/webapp/login.html
@@ -238,7 +238,7 @@ footer {
 
       <ul class="header_login">
         <li><a href="login.html">로그인</a></li>
-        <li><a href="#">회원가입</a></li>
+        <li><a href="signup">회원가입</a></li>
       </ul>
     </header>
 
