--- a/app-server/src/main/webapp/index.html
+++ b/app-server/src/main/webapp/index.html
@@ -223,8 +223,8 @@ footer {
       </ul>
 
       <ul class="header_login">
-        <li><a href="login.html">로그인</a></li>
         <li><a href="signup">회원가입</a></li>
+        <li><a href="login">로그인</a></li>
       </ul>
     </header>
 
