--- a/app-server/src/main/webapp/index.html
+++ b/app-server/src/main/webapp/index.html
@@ -155,12 +155,39 @@ section {
   width: 100%;
   height: 800px;
   background-color: rgb(219, 211, 209);
+  text-align: center;
+}
+
+.contents .c1 #main_1 {
+  opacity: 35%;
 }
 
 .contents .c2 {
   width: 100%;
   height: 800px;
   background-color: rgb(247, 231, 215);
+  display: flex;
+  flex-direction: row;
+}
+
+.contents .c2 .c2-leftbox {
+  width: 50%;
+  border: 3px solid red;
+  text-align: center;
+  padding-top: 100px;
+}
+
+.contents .c2 .c2-rightbox {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contents .c2 #main_2 {
+  max-width: 90%;
+  dispaly: inline-block;
 }
 
 .contents .c3 {
@@ -230,11 +257,11 @@ footer {
 
     <section>
     <div class="contents">
-      <div class="c1">
-        첫번째 내용
+      <div class="c1"><img src="img/main_1.JPG" id="main_1">
       </div>
       <div class="c2">
-        두번째 내용
+        <div class="c2-leftbox">오늘의 공부 텍스트 박스</div>
+        <div class="c2-rightbox"><img src="img/main_2.jpg" id="main_2"></div>
       </div>
       <div class="c3">
         세번째 내용
