1115 push 네이버 DB 연동 실패 ㅜㅜ.. 관리자 스터디 컨트롤러 하나로 합침

--- a/app-server/src/main/webapp/naverCallback.html
+++ b/app-server/src/main/webapp/naverCallback.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script type="text/javascript">
-  var naver_id_login = new naver_id_login("wh8zH3W5STAuoCbw48Fz", "http://localhost:8080/ogong/adminNotice/list");
+  var naver_id_login = new naver_id_login("wh8zH3W5STAuoCbw48Fz", "http://localhost:8080/ogong/app/index");
   // 접근 토큰 값 출력
   alert(naver_id_login.oauthParams.access_token);
   // 네이버 사용자 프로필 조회
