--- a/app-server/src/main/webapp/naverLogin.html
+++ b/app-server/src/main/webapp/naverLogin.html
@@ -11,10 +11,10 @@
   <div id="naver_id_login"></div>
   <!-- //네이버 로그인 버튼 노출 영역 -->
   <script type="text/javascript">
-    var naver_id_login = new naver_id_login("wh8zH3W5STAuoCbw48Fz", "http://localhost:8080/ogong/adminNotice/list");
+    var naver_id_login = new naver_id_login("wh8zH3W5STAuoCbw48Fz", "http://localhost:8080/ogong/app/index");
     var state = naver_id_login.getUniqState();
     naver_id_login.setButton("green", 3,40);
-    naver_id_login.setDomain("http://localhost:8080/ogong/login");
+    naver_id_login.setDomain("http://localhost:8080/ogong/app/login");
     naver_id_login.setState(state);
     naver_id_login.setPopup();
     naver_id_login.init_naver_id_login();
